0.2.13: Fix weChat association/login issues from some clients Fix ministry skill setup issue. Fix the list item title's word wrapping issue

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -335,6 +335,9 @@ ion-content {
   min-width: 80px;
 }
 
+.ibc-allow-wrap {
+  white-space: normal !important;
+}
 
 body {
   // user-select: text;
